subsections func defined
TO-DO:
- implement to make sure it is applied correctly to image and mask
- create list of subsection images

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,9 @@
      "start_time": "2025-04-28T19:33:22.978488Z"
     }
    },
-   "source": "from ultralytics import YOLO\n",
+   "source": [
+    "from ultralytics import YOLO\n"
+   ],
    "outputs": [],
    "execution_count": 1
   },
