--- a/subsections.ipynb
+++ b/subsections.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -19,15 +19,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-09T03:02:03.130227300Z",
-     "start_time": "2025-05-09T03:02:03.070299500Z"
+     "end_time": "2025-05-09T03:22:58.095217300Z",
+     "start_time": "2025-05-09T03:22:57.976864900Z"
     }
    },
    "id": "e2daf235d8810a51"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def get_subsections(img, mask):\n",
@@ -49,37 +49,57 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-09T02:56:40.023817500Z",
-     "start_time": "2025-05-09T02:56:40.006755200Z"
+     "end_time": "2025-05-09T03:22:58.110940300Z",
+     "start_time": "2025-05-09T03:22:58.095217300Z"
     }
    },
    "id": "2d1fcdc6fa24d092"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'c' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-6-b3cb82e47b04>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[0mnumWaldos\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;36m18\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;32mfor\u001B[0m \u001B[0mimg\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnumWaldos\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 4\u001B[1;33m     \u001B[0mfull_imgs\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mc\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m: name 'c' is not defined"
-     ]
-    }
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "full_images = []\n",
+    "full_image_masks = []\n",
+    "numScenes = 18\n",
+    "cropped_images = []\n",
+    "cropped_masks = []\n",
+    "numCrops = 20 #placeholder, can change to anything to get more random subsections\n",
+    "\n",
+    "for i in range(numScenes):\n",
+    "    img = cv.imread(f\"./original_images/full_images/{i}.jpg\")\n",
+    "    full_images.append(img)\n",
+    "    mask = cv.imread(f\"./original_images/full_images_masks/{i}.jpg\")\n",
+    "    full_image_masks.append(mask)\n",
+    "\n",
+    "for i in range(numScenes):\n",
+    "    cropped_img, cropped_mask = get_subsections(full_images[i], full_image_masks[i])\n",
+    "    cropped_images.append(cropped_img)\n",
+    "    cropped_masks.append(cropped_mask)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-05-09T03:22:59.269807400Z",
+     "start_time": "2025-05-09T03:22:58.110940300Z"
+    }
+   },
+   "id": "b9c5f8f9b20419ae"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-09T02:56:40.035695700Z",
-     "start_time": "2025-05-09T02:56:40.020785700Z"
+     "end_time": "2025-05-09T03:22:59.285806700Z",
+     "start_time": "2025-05-09T03:22:59.269807400Z"
     }
    },
-   "id": "b9c5f8f9b20419ae"
+   "id": "c42e0ddf9acfd59a"
   }
  ],
  "metadata": {
